force-app/main/default/objects/ProductOption__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <label>Bundle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Options (Bundle)</relationshipLabel>
    <relationshipName>BundleProductOptions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>