force-app/main/default/objects/ProductOption__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Options (Component)</relationshipLabel>
    <relationshipName>ComponentProductOptions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>