force-app/main/default/objects/ProductOption__c/fields/IsOptional__c.field-meta.xml
<CustomField>
    <fullName>IsOptional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Optional</label>
    <type>Checkbox</type>
</CustomField>